src/content/docs/en/0.20.0/rpc/blockchain/getmempoolinfo.md
---
name: getmempoolinfo
btcversion: 0.20.0
btcgroup: blockchain
permalink: en/doc/0.20.0/rpc/blockchain/getmempoolinfo/
---

getmempoolinfo

Returns details on the active state of the TX memory pool.

Result:
{                           (json object)
  "loaded" : true|false,    (boolean) True if the mempool is fully loaded
  "size" : n,               (numeric) Current tx count
  "bytes" : n,              (numeric) Sum of all virtual transaction sizes as defined in BIP 141. Differs from actual serialized size because witness data is discounted
  "usage" : n,              (numeric) Total memory usage for the mempool
  "maxmempool" : n,         (numeric) Maximum memory usage for the mempool
  "mempoolminfee" : n,      (numeric) Minimum fee rate in BTC/kB for tx to be accepted. Is the maximum of minrelaytxfee and minimum mempool fee
  "minrelaytxfee" : n       (numeric) Current minimum relay fee for transactions
}

Examples:
> bitcoin-cli getmempoolinfo 
> curl --user myusername --data-binary '{"jsonrpc": "1.0", "id": "curltest", "method": "getmempoolinfo", "params": []}' -H 'content-type: text/plain;' http://127.0.0.1:8332/


